@@ -17,48 +17,67 @@ import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.transaction.annotation.Transactional;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
-@AutoConfigureMockMvc(addFilters = false)
+@AutoConfigureMockMvc
 @Transactional
 class BookmarkControllerTest {
 
-    @Autowired MockMvc mvc;
-    @Autowired UserRepository userRepository;
-    @Autowired PinRepository pinRepository;
-    @Autowired BookmarkRepository bookmarkRepository;
+    @Autowired
+    private MockMvc mvc;
+    @Autowired
+    private UserRepository userRepository;
+    @Autowired
+    private PinRepository pinRepository;
+    @Autowired
+    private BookmarkRepository bookmarkRepository;
 
-    long failedTargetId = Long.MAX_VALUE;
+    private final long failedTargetId = Long.MAX_VALUE;
+
+    /**
+     * 특정 사용자(user)로 인증된 MockHttpServletRequestBuilder를 반환하는 헬퍼 메서드
+     * @param user 인증할 사용자 객체
+     * @return Authorization 헤더가 추가된 String
+     */
+    private String getAuthHeader(User user) {
+        return "Bearer %s".formatted(user.getApiKey());
+    }
+
+    private Pin findPinByContent(String content) {
+        return pinRepository.findAll().stream()
+                .filter(p -> content.equals(p.getContent()))
+                .findFirst().orElseThrow();
+    }
 
     @Test
     @DisplayName("t1_1. 북마크 생성 성공")
     void t1_1() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
-        Pin pinC = pinRepository.findAll().stream()
-                .filter(p -> "청계천 산책로 발견 👣".equals(p.getContent()))
-                .findFirst().orElseThrow();
-
-        Long targetUserId = user1.getId();
+        // user1은 pinA, pinD를 북마크 하고 있음. pinC는 북마크 하지 않음.
+        Pin pinC = findPinByContent("청계천 산책로 발견 👣");
         Long targetPinId = pinC.getId();
 
-        String jsonContent = String.format("{\n  \"userId\": %d,\n  \"pinId\": %d\n}", targetUserId, targetPinId);
+        String jsonContent = """
+                                {
+                                  "pinId": %d
+                                }
+                            """.formatted(targetPinId);
 
         ResultActions resultActions = mvc.perform(
                 post("/api/pins/{pinId}/bookmarks", targetPinId)
-                        .with(csrf())
+                        .header("Authorization", getAuthHeader(user1))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonContent)
         ).andDo(print());
 
         resultActions.andExpect(status().isOk())
+                .andExpect(jsonPath("$.errorCode").value("200"))
                 .andExpect(jsonPath("$.data.id").isNumber())
-                .andExpect(jsonPath("$.data.pin.id").value(targetPinId.intValue()))
-                .andExpect(jsonPath("$.errorCode").value("200"));
+                .andExpect(jsonPath("$.data.pin.id").value(targetPinId.intValue()));
 
         assertThat(bookmarkRepository.findByUserAndPinAndDeletedFalse(user1, pinC)).isPresent();
     }
@@ -67,18 +86,19 @@ class BookmarkControllerTest {
     @DisplayName("t1_2. 북마크 생성 실패 (이미 북마크된 핀)")
     void t1_2() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
-        Pin pinA = pinRepository.findAll().stream()
-                .filter(p -> "서울 시청 근처 카페 ☕".equals(p.getContent()))
-                .findFirst().orElseThrow();
-
-        Long targetUserId = user1.getId();
+        // user1은 pinA를 이미 북마크 하고 있음
+        Pin pinA = findPinByContent("서울 시청 근처 카페 ☕");
         Long targetPinId = pinA.getId();
 
-        String jsonContent = String.format("{\n  \"userId\": %d,\n  \"pinId\": %d\n}", targetUserId, targetPinId);
+        String jsonContent = """
+                                {
+                                  "pinId": %d
+                                }
+                            """.formatted(targetPinId);
 
         ResultActions resultActions = mvc.perform(
                 post("/api/pins/{pinId}/bookmarks", targetPinId)
-                        .with(csrf())
+                        .header("Authorization", getAuthHeader(user1))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonContent)
         ).andDo(print());
@@ -89,85 +109,106 @@ class BookmarkControllerTest {
     }
 
     @Test
-    @DisplayName("t1_3. 북마크 생성 실패 (존재하지 않는 사용자 ID)")
+    @DisplayName("t1_3. 북마크 생성 실패 (인증되지 않은 사용자)")
     void t1_3() throws Exception {
-        Pin pinA = pinRepository.findAll().stream()
-                .filter(p -> "서울 시청 근처 카페 ☕".equals(p.getContent()))
-                .findFirst().orElseThrow();
+        Pin pinA = findPinByContent("서울 시청 근처 카페 ☕");
         Long targetPinId = pinA.getId();
 
-        String jsonContent = String.format("{\n  \"userId\": %d,\n  \"pinId\": %d\n}", failedTargetId, targetPinId);
+        String jsonContent = """
+                                {
+                                  "pinId": %d
+                                }
+                            """.formatted(targetPinId);
+
+        // Authorization 헤더 없이 요청
+        ResultActions resultActions = mvc.perform(
+                post("/api/pins/{pinId}/bookmarks", targetPinId)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonContent)
+        ).andDo(print());
+
+        // 인증되지 않은 요청은 403 Forbidden
+        resultActions.andExpect(status().isForbidden());
+    }
+
+    @Test
+    @DisplayName("t1_4. 북마크 생성 실패 (존재하지 않는 핀 ID)")
+    void t1_4() throws Exception {
+        User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
+        Long targetPinId = failedTargetId;
+
+        String jsonContent = """
+                                {
+                                  "pinId": %d
+                                }
+                            """.formatted(targetPinId);
 
         ResultActions resultActions = mvc.perform(
                 post("/api/pins/{pinId}/bookmarks", targetPinId)
-                        .with(csrf())
+                        .header("Authorization", getAuthHeader(user1))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonContent)
         ).andDo(print());
 
         resultActions.andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.errorCode").value("2006"))
+                .andExpect(jsonPath("$.errorCode").value("1002"))
                 .andExpect(jsonPath("$.msg").exists());
     }
+
 
     @Test
     @DisplayName("t2_1. 나의 북마크 목록 조회 성공")
     void t2_1() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
-        Long targetUserId = user1.getId();
 
         ResultActions resultActions = mvc.perform(
-                get("/api/bookmarks").param("userId", String.valueOf(targetUserId))
+                get("/api/bookmarks")
+                        .header("Authorization", getAuthHeader(user1))
         ).andDo(print());
 
         resultActions.andExpect(status().isOk())
                 .andExpect(jsonPath("$.errorCode").value("200"))
-                .andExpect(jsonPath("$.data.length()").value(2));
+                .andExpect(jsonPath("$.data.length()").value(2)); // pinA, pinD
     }
 
     @Test
     @DisplayName("t2_2. 나의 북마크 목록 조회 성공 (북마크 없음)")
     void t2_2() throws Exception {
-        User noBookmarkUser = userRepository.save(new User("nobody+" + Math.random() + "@example.com", "hashed", "노바디"));
-        Long targetUserId = noBookmarkUser.getId();
+        User user2 = userRepository.findByEmail("user2@example.com").orElseThrow();
 
         ResultActions resultActions = mvc.perform(
-                get("/api/bookmarks").param("userId", String.valueOf(targetUserId))
+                get("/api/bookmarks")
+                        .header("Authorization", getAuthHeader(user2))
         ).andDo(print());
 
         resultActions.andExpect(status().isOk())
                 .andExpect(jsonPath("$.errorCode").value("200"))
-                .andExpect(jsonPath("$.data.length()").value(0));
+                .andExpect(jsonPath("$.data.length()").value(1)); // pinB
     }
 
     @Test
-    @DisplayName("t2_3. 나의 북마크 목록 조회 실패 (존재하지 않는 사용자 ID)")
+    @DisplayName("t2_3. 나의 북마크 목록 조회 실패 (인증되지 않은 사용자)")
     void t2_3() throws Exception {
         ResultActions resultActions = mvc.perform(
-                get("/api/bookmarks").param("userId", String.valueOf(failedTargetId))
+                get("/api/bookmarks")
         ).andDo(print());
 
-        resultActions.andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.errorCode").value("2006"))
-                .andExpect(jsonPath("$.msg").exists());
+        resultActions.andExpect(status().isForbidden());
     }
+
 
     @Test
     @DisplayName("t3_1. 북마크 삭제 성공 (soft delete)")
     void t3_1() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
-        Pin pinA = pinRepository.findAll().stream()
-                .filter(p -> "서울 시청 근처 카페 ☕".equals(p.getContent()))
-                .findFirst().orElseThrow();
+        Pin pinA = findPinByContent("서울 시청 근처 카페 ☕");
         Bookmark bookmark1A = bookmarkRepository.findByUserAndPinAndDeletedFalse(user1, pinA).orElseThrow();
 
-        Long targetUserId = user1.getId();
         Long targetBookmarkId = bookmark1A.getId();
 
         ResultActions resultActions = mvc.perform(
                 delete("/api/bookmarks/{bookmarkId}", targetBookmarkId)
-                        .with(csrf())
-                        .param("userId", String.valueOf(targetUserId))
+                        .header("Authorization", getAuthHeader(user1))
         ).andDo(print());
 
         resultActions.andExpect(status().isOk())
@@ -181,12 +222,10 @@ class BookmarkControllerTest {
     @DisplayName("t3_2. 북마크 삭제 실패 (존재하지 않는 북마크 ID)")
     void t3_2() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
-        Long targetUserId = user1.getId();
 
         ResultActions resultActions = mvc.perform(
                 delete("/api/bookmarks/{bookmarkId}", failedTargetId)
-                        .with(csrf())
-                        .param("userId", String.valueOf(targetUserId))
+                        .header("Authorization", getAuthHeader(user1))
         ).andDo(print());
 
         resultActions.andExpect(status().isNotFound())
@@ -199,20 +238,18 @@ class BookmarkControllerTest {
     void t3_3() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
         User user2 = userRepository.findByEmail("user2@example.com").orElseThrow();
-        Pin pinA = pinRepository.findAll().stream()
-                .filter(p -> "서울 시청 근처 카페 ☕".equals(p.getContent()))
-                .findFirst().orElseThrow();
+        Pin pinA = findPinByContent("서울 시청 근처 카페 ☕");
         Bookmark bookmark1A = bookmarkRepository.findByUserAndPinAndDeletedFalse(user1, pinA).orElseThrow();
 
-        Long otherUserId = user2.getId();
         Long targetBookmarkId = bookmark1A.getId();
 
+        // user2가 user1의 북마크 삭제 시도
         ResultActions resultActions = mvc.perform(
                 delete("/api/bookmarks/{bookmarkId}", targetBookmarkId)
-                        .with(csrf())
-                        .param("userId", String.valueOf(otherUserId))
+                        .header("Authorization", getAuthHeader(user2)) // user2로 인증
         ).andDo(print());
 
+        //소유자 체크 실패 시 Not Found 반환
         resultActions.andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.errorCode").value("4001"))
                 .andExpect(jsonPath("$.msg").exists());
@@ -222,21 +259,19 @@ class BookmarkControllerTest {
     @DisplayName("t3_4. 북마크 복원 성공")
     void t3_4() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
-        Pin pinA = pinRepository.findAll().stream()
-                .filter(p -> "서울 시청 근처 카페 ☕".equals(p.getContent()))
-                .findFirst().orElseThrow();
-        // 기존 북마크를 t삭제 상태로 만들어 놓기
-        Bookmark bookmark1A = bookmarkRepository.findByUserAndPinAndDeletedFalse(user1, pinA).orElseThrow();
+        Pin pinA = findPinByContent("서울 시청 근처 카페 ☕");
+
+        // 기존 북마크를 삭제 상태로 만들어 놓기
+        Bookmark bookmark1A = bookmarkRepository.findByUserAndPinAndDeletedFalse(user1, pinA)
+                .orElseThrow(() -> new RuntimeException("Test setup failed: Bookmark not found"));
         bookmark1A.setDeleted();
         bookmarkRepository.save(bookmark1A);
 
-        Long targetUserId = user1.getId();
         Long targetBookmarkId = bookmark1A.getId();
 
         ResultActions resultActions = mvc.perform(
                 patch("/api/bookmarks/{bookmarkId}", targetBookmarkId)
-                        .with(csrf())
-                        .param("userId", String.valueOf(targetUserId))
+                        .header("Authorization", getAuthHeader(user1))
         ).andDo(print());
 
         resultActions.andExpect(status().isOk())
@@ -250,12 +285,10 @@ class BookmarkControllerTest {
     @DisplayName("t3_5. 북마크 복원 실패 (존재하지 않는 북마크 ID)")
     void t3_5() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
-        Long targetUserId = user1.getId();
 
         ResultActions resultActions = mvc.perform(
                 patch("/api/bookmarks/{bookmarkId}", failedTargetId)
-                        .with(csrf())
-                        .param("userId", String.valueOf(targetUserId))
+                        .header("Authorization", getAuthHeader(user1))
         ).andDo(print());
 
         resultActions.andExpect(status().isNotFound())
@@ -268,24 +301,23 @@ class BookmarkControllerTest {
     void t3_6() throws Exception {
         User user1 = userRepository.findByEmail("user1@example.com").orElseThrow();
         User user2 = userRepository.findByEmail("user2@example.com").orElseThrow();
-        Pin pinA = pinRepository.findAll().stream()
-                .filter(p -> "서울 시청 근처 카페 ☕".equals(p.getContent()))
-                .findFirst().orElseThrow();
-        Bookmark bookmark1A = bookmarkRepository.findByUserAndPinAndDeletedFalse(user1, pinA).orElseThrow();
+        Pin pinA = findPinByContent("서울 시청 근처 카페 ☕");
 
-        // 소유자가 다르도록 북마크를 삭제 상태로 만들어 놓기
+        // 기존 북마크를 삭제 상태로 만들어 놓기
+        Bookmark bookmark1A = bookmarkRepository.findByUserAndPinAndDeletedFalse(user1, pinA)
+                .orElseThrow(() -> new RuntimeException("Test setup failed: Bookmark not found"));
         bookmark1A.setDeleted();
         bookmarkRepository.save(bookmark1A);
 
-        Long otherUserId = user2.getId();
         Long targetBookmarkId = bookmark1A.getId();
 
+        // user2가 user1의 북마크 복원 시도
         ResultActions resultActions = mvc.perform(
                 patch("/api/bookmarks/{bookmarkId}", targetBookmarkId)
-                        .with(csrf())
-                        .param("userId", String.valueOf(otherUserId))
+                        .header("Authorization", getAuthHeader(user2)) // user2로 인증
         ).andDo(print());
 
+        // 소유자 체크 실패 시 Not Found 반환
         resultActions.andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.errorCode").value("4001"))
                 .andExpect(jsonPath("$.msg").exists());
